--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="textColorPrimary">#616161</color>
     <color name="textColorSecondary">#9E9E9E</color>
 
+    <color name="black_overlay">#66000000</color>
+
 </resources>
