--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -8,33 +8,61 @@
     android:layout_margin="@dimen/margin_5"
     app:cardCornerRadius="@dimen/card_corner_radius">
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="@dimen/margin_5"
-        >
-        <TextView
-            android:textStyle="bold"
-            android:typeface="normal"
-            android:id="@+id/noteTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textColor="@color/textColorPrimary"
-            android:text=""
-            android:layout_margin="4dp"
-            />
-        <TextView
-            android:textStyle="italic"
-            android:layout_below="@id/noteTitle"
-            android:id="@+id/noteDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:textColor="@color/textColorSecondary"
-            android:text=""
-            android:layout_margin="4dp"
-            />
-    </androidx.appcompat.widget.LinearLayoutCompat>
+        android:layout_height="wrap_content">
+
+            <TextView
+                android:textStyle="bold"
+                android:typeface="normal"
+                android:id="@+id/noteTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textColor="@color/textColorPrimary"
+                android:text="noteTitle "
+                android:layout_margin="4dp"
+                android:layout_alignParentStart="true"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_toLeftOf="@id/editBtn"
+                />
+            <TextView
+                android:textStyle="italic"
+                android:layout_below="@id/noteTitle"
+                android:id="@+id/noteDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:textColor="@color/textColorSecondary"
+                android:text="noteDescription noteDescription "
+                android:layout_alignParentStart="true"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_margin="4dp"
+                android:layout_toLeftOf="@id/editBtn"
+                />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/editBtn"
+                    android:src="@android:drawable/ic_menu_edit"
+                    android:layout_centerVertical="true"
+                    android:layout_toStartOf="@id/deleteBtn"
+                    android:layout_marginRight="@dimen/margin_10"
+                    />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/deleteBtn"
+                    android:src="@android:drawable/ic_menu_delete"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="@dimen/margin_10"
+                    />
+
+    </RelativeLayout>
+
 </com.google.android.material.card.MaterialCardView>
