--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#0288D1</color>
+    <color name="colorPrimary">#0D47A1</color>
+    <color name="colorPrimaryDark">#1A237E</color>
+    <color name="colorAccent">#673AB7</color>
     <color name="textColorPrimary">#616161</color>
     <color name="textColorSecondary">#9E9E9E</color>
-
     <color name="black_overlay">#66000000</color>
 
 </resources>
