--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -10,6 +10,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
+        android:id="@+id/relativeBackground"
         android:layout_height="wrap_content">
 
             <TextView
@@ -18,6 +19,7 @@
                 android:id="@+id/noteTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_10"
                 android:textSize="20sp"
                 android:textColor="@color/textColorPrimary"
                 android:text="noteTitle "
@@ -33,6 +35,7 @@
                 android:id="@+id/noteDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/margin_10"
                 android:textSize="15sp"
                 android:textColor="@color/textColorSecondary"
                 android:text="noteDescription noteDescription "
