--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0D47A1</color>
-    <color name="colorPrimaryDark">#1A237E</color>
-    <color name="colorAccent">#673AB7</color>
+    <color name="colorPrimary">#ffab40</color>
+    <color name="colorPrimaryDark">#c77c02</color>
+    <color name="colorAccent">#ffdd71</color>
     <color name="textColorPrimary">#616161</color>
     <color name="textColorSecondary">#9E9E9E</color>
     <color name="black_overlay">#66000000</color>
+    <color name="light_red">#ff8566</color>
+    <color name="light_green">#00cc44</color>
+    <color name="light_blue">#8080ff</color>
+    <color name="light_yellow">#cccc00</color>
 
 </resources>
