--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,10 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/splash_back"
     tools:context=".uicomponents.activities.splash.SplashActivity">
-
-
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,5 +12,4 @@
         android:layout_centerVertical="true"
         android:src="@drawable/noteback"
         />
-
 </RelativeLayout>
