--- a/app/src/main/res/layout/content_security.xml
+++ b/app/src/main/res/layout/content_security.xml
@@ -63,7 +63,6 @@
             android:maxLength="4"
             android:textIsSelectable="false"
             android:textSize="20sp"
-            android:focusedByDefault="true"
             android:layout_marginLeft="@dimen/margin_10"
             android:layout_marginRight="@dimen/margin_10"
             android:focusableInTouchMode="true"
@@ -71,6 +70,12 @@
             />
 
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"
+            android:layout_marginTop="@dimen/margin_10"
+            />
         <androidx.appcompat.widget.AppCompatSpinner
             android:id="@+id/securityQOne"
             android:layout_width="match_parent"
@@ -78,6 +83,15 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_10"
             android:layout_marginBottom="@dimen/margin_10"
+            android:paddingTop="@dimen/margin_10"
+            android:paddingBottom="@dimen/margin_10"
+            />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"
+            android:layout_marginTop="@dimen/margin_10"
             />
 
         <com.google.android.material.textfield.TextInputLayout
