--- a/app/src/main/res/layout/activity_security.xml
+++ b/app/src/main/res/layout/activity_security.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".uicomponents.activities.setuppin.SetupSecurity">
+    tools:context=".uicomponents.activities.setuppin.SetupIGetSecurity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
