--- a/app/src/main/res/layout/content_pin.xml
+++ b/app/src/main/res/layout/content_pin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,6 +9,16 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_pin"
     >
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtPin"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:text="@string/enter_pin"
+        android:layout_margin="@dimen/margin_20"
+        android:layout_centerHorizontal="true"
+        />
 
     <com.noteapp.uicomponents.common.PinEntryEditText
         android:id="@+id/otpView"
@@ -24,5 +34,7 @@
         android:layout_marginLeft="@dimen/margin_10"
         android:layout_marginRight="@dimen/margin_10"
         android:focusableInTouchMode="true"
+        android:layout_marginTop="@dimen/margin_20"
+        android:layout_below="@id/txtPin"
         />
-</LinearLayout>
+</RelativeLayout>
