--- a/app/src/main/res/layout/content_security.xml
+++ b/app/src/main/res/layout/content_security.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".uicomponents.activities.setuppin.SetupIGetSecurity"
+    tools:context=".uicomponents.activities.setuppin.SetupSecurity"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_security"
     >
