--- a/app/src/main/res/layout/content_security.xml
+++ b/app/src/main/res/layout/content_security.xml
@@ -27,22 +27,22 @@
             android:layout_marginTop="@dimen/margin_10"
             android:layout_gravity="center_horizontal"
             />
-    <com.noteapp.uicomponents.common.PinEntryEditText
-        android:id="@+id/newPin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:cursorVisible="false"
-        android:digits="1234567890"
-        android:inputType="number"
-        android:maxLength="4"
-        android:textIsSelectable="false"
-        android:textSize="20sp"
-        android:focusedByDefault="true"
-        android:layout_marginLeft="@dimen/margin_10"
-        android:layout_marginRight="@dimen/margin_10"
-        android:focusableInTouchMode="true"
-        android:layout_marginTop="@dimen/margin_10"
-        />
+        <com.noteapp.uicomponents.common.PinEntryEditText
+            android:id="@+id/newPin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:cursorVisible="false"
+            android:digits="1234567890"
+            android:inputType="number"
+            android:maxLength="4"
+            android:textIsSelectable="false"
+            android:textSize="20sp"
+            android:focusedByDefault="true"
+            android:layout_marginLeft="@dimen/margin_10"
+            android:layout_marginRight="@dimen/margin_10"
+            android:focusableInTouchMode="true"
+            android:layout_marginTop="@dimen/margin_10"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -109,6 +109,16 @@
                 android:maxLength="50"
                 android:hint="@string/answer"/>
         </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.switchmaterial.SwitchMaterial
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/request_pin_start"
+            android:id="@+id/askPIN"
+            app:switchPadding="@dimen/margin_20"
+            android:layout_margin="@dimen/margin_10"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            />
 
         <com.google.android.material.button.MaterialButton
             android:layout_width="wrap_content"
