--- a/app/src/main/res/layout/content_pin_selected.xml
+++ b/app/src/main/res/layout/content_pin_selected.xml
@@ -2,57 +2,20 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".uicomponents.activities.setuppin.SetupSecurity"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_security"
     >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginTop="@dimen/margin_5"
         android:layout_marginLeft="@dimen/margin_5"
         android:layout_marginRight="@dimen/margin_5">
 
-        <!--Main Option Radio Buttons -->
-        <RadioGroup
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="horizontal">
-            <RadioButton
-                android:id="@+id/finderPrintOption"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/use_finger_print"/>
-            <RadioButton
-                android:id="@+id/pinOption"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/use_pin"/>
-        </RadioGroup>
-
-        <!--<LinearLayout
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:visibility="invisible"
-            layout="@layout/content_pin_selected"
-            android:id="@+id/pinComponentLayout"
-            />-->
-
-            <include
-                android:id="@+id/pin_content_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="invisible"
-                layout="@layout/content_pin_selected"/>
-
-        <!--<TextView
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -160,7 +123,7 @@
             android:text="Save"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/margin_20"
-            />-->
+            />
     </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
