--- a/app/src/main/res/layout/content_pin.xml
+++ b/app/src/main/res/layout/content_pin.xml
@@ -39,7 +39,7 @@
         />
 
 
-    <com.google.android.material.button.MaterialButton
+    <!--<com.google.android.material.button.MaterialButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btnSubmit"
@@ -47,5 +47,5 @@
         android:text="Submit"
         android:layout_centerHorizontal="true"
         android:layout_margin="@dimen/margin_20"
-        />
+        />-->
 </RelativeLayout>
